--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Liuqiang</string>
     <string name="hello_world">Hello World!</string>
     <string name="second_page">second page</string>
+    <string name="go_second_page">go second_page</string>
 </resources>
