--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -6,4 +6,11 @@
 	<string name="go_second_page" >跳转到第二页</string>
 	<string name="calculator" >计算器</string>
 	<string name="simple_calculator" >简单计算器</string>
+	<string name="weather">晴天</string>
+	<string name="first_short">first</string>
+	<string name="first_long">启停活动</string>
+	<string name="second_short">second</string>
+	<string name="second_long">来回跳转</string>
+	<string name="third_short">third</string>
+	<string name="third_long">登陆返回</string>
 </resources>
